--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,7 +7,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/components.cjs",
   "module": "./dist/components.js",
   "exports": {
@@ -25,6 +27,9 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "autoprefixer": "10.4.7",
+    "postcss": "8.4.14",
+    "tailwindcss": "3.1.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
