--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@bbki.ng/components",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "tsc && vite build"
   },
   "files": [
     "dist"
