--- a/packages/stylebase/package.json
+++ b/packages/stylebase/package.json
@@ -10,5 +10,8 @@
   "type": "commonjs",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "publishConfig": {
+    "access": "public"
+  }
 }
