--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "phenomenon": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
