--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,9 +26,10 @@
     }
   },
   "dependencies": {
+    "@bbki.ng/stylebase": "workspace:0.0.1",
+    "phenomenon": "^1.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "phenomenon": "^1.6.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
