--- a/packages/stylebase/package.json
+++ b/packages/stylebase/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@bbki.ng/stylebase",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "index.cjs",
   "files": ["index.cjs", "plugin.cjs"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
