--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,20 +26,13 @@
     }
   },
   "dependencies": {
-    "@bbki.ng/stylebase": "workspace:0.0.1",
+    "@bbki.ng/stylebase": "workspace:0.0.3",
     "phenomenon": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.9",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-vite": "^0.2.0",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
     "@types/node": "18.6.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
@@ -47,6 +40,7 @@
     "autoprefixer": "10.4.7",
     "babel-loader": "^8.2.5",
     "postcss": "8.4.14",
+    "react-router-dom": "6.3.0",
     "tailwindcss": "3.1.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
