--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -6,9 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "tsc && vite build",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "prepare": "tsc && vite build"
   },
   "files": [
     "dist"
