--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -28,7 +28,7 @@
     "swr": "^1.2.1"
   },
   "devDependencies": {
-    "@bbki.ng/design": "1.1.4",
+    "@bbki.ng/stylebase": "0.0.3",
     "@mdx-js/mdx": "2.0.0-next.9",
     "@mdx-js/react": "^1.6.22",
     "@tailwindcss/typography": "^0.5.0",
