--- a/packages/stylebase/package.json
+++ b/packages/stylebase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bbki.ng/stylebase",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "dist/index.js",
   "files": [
@@ -18,6 +18,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/typography": "0.5.4",
     "vite": "^3.0.0"
   },
