--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,24 +3,23 @@
   "version": "2.1.6",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "prepare": "tsc && vite build"
+    "build": "tsup",
+    "prepare": "tsup",
+    "dev": "tsup --watch"
   },
   "files": [
     "dist"
   ],
-  "main": "./dist/components.cjs",
-  "module": "./dist/components.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
-      "import": "./dist/components.js",
-      "require": "./dist/components.umd.cjs"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
     "./style": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
+      "import": "./dist/index.css",
+      "require": "./dist/index.css"
     }
   },
   "dependencies": {
@@ -40,7 +39,7 @@
     "postcss": "8.4.14",
     "react-router-dom": "6.3.0",
     "tailwindcss": "3.1.6",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "tsup": "6.2.0",
+    "typescript": "^4.6.4"
   }
 }
