--- a/packages/manual/package.json
+++ b/packages/manual/package.json
@@ -15,16 +15,23 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@bbki.ng/components": "workspace:2.1.7",
+    "@bbki.ng/stylebase": "workspace:0.0.5",
     "@docusaurus/core": "2.0.0-rc.1",
     "@docusaurus/preset-classic": "2.0.0-rc.1",
     "@mdx-js/react": "^1.6.22",
+    "autoprefixer": "10.4.7",
+    "classnames": "2.3.1",
     "clsx": "^1.2.1",
+    "postcss": "8.4.14",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "3.1.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.0.0-rc.1",
+    "@docusaurus/types": "2.0.0-rc.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "docusaurus": "1.14.7",
     "typescript": "^4.7.4"
