--- a/packages/manual/package.json
+++ b/packages/manual/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "manual",
-  "version": "0.0.0",
+  "name": "@bbki.ng/manual",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
