--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@changesets/cli": "2.24.1"
+    "@changesets/cli": "2.24.1",
+    "turbo": "1.3.4"
   }
 }
