--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   builds:
     runs-on: ubuntu-latest
+    if: "contains(github.event.head_commit.message, 'changeset-release')"
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
