--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,3 +24,17 @@ jobs:
         run: npm install -g pnpm
       - name: Install Dependencies
         run: pnpm install --no-frozen-lockfile
+      - name: Create Release Pull Request or Publish to npm
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          # This expects you to have a script called release which does a build for your packages and calls changeset publish
+          publish: yarn release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Send a Slack notification if a publish happens
+        if: steps.changesets.outputs.published != 'true'
+        # You can do something when a publish happens.
+        run: exit 0
