--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@bbki.ng/stylebase": "workspace:0.0.10",
+    "classnames": "2.3.1",
     "phenomenon": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
