--- a/packages/manual/blog/authors.yml
+++ b/packages/manual/blog/authors.yml
@@ -1,17 +1,5 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
-
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+bbki.ng:
+  name: bbbottle
+  title: Maintainer of bbki.ng
+  url: https://bbki.ng
+  # image_url: https://bbki.ng/favicon.svg
