--- a/packages/manual/package.json
+++ b/packages/manual/package.json
@@ -33,6 +33,7 @@
     "@docusaurus/types": "2.0.0-rc.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "docusaurus": "1.14.7",
+    "react-router-dom": "6.3.0",
     "typescript": "^4.7.4"
   },
   "browserslist": {
