fix: auth avatar

--- a/packages/manual/blog/authors.yml
+++ b/packages/manual/blog/authors.yml
@@ -2,4 +2,4 @@ bbki.ng:
   name: bbbottle
   title: Maintainer of bbki.ng
   url: https://bbki.ng
-  # image_url: https://bbki.ng/favicon.svg
+  image_url: /img/avatar.jpg
