--- a/packages/manual/package.json
+++ b/packages/manual/package.json
@@ -34,6 +34,9 @@
     "@tsconfig/docusaurus": "^1.0.5",
     "docusaurus": "1.14.7",
     "react-router-dom": "6.3.0",
+    "rehype-add-classes": "1.0.0",
+    "rehype-template": "0.3.0",
+    "rehype-wrap": "1.0.10",
     "typescript": "^4.7.4"
   },
   "browserslist": {
