chore: udpate workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,14 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_SITE_TARGET }}
           EXCLUDE: "/dist/, /node_modules/"
+      - name: send telegram message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHANNEL_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            BBKi.ng Deployed to server.
+            See changes: http://bbki.ng
       - name: Deploy manual to Server
         if: steps.changesets.outputs.published == 'true'
         uses: easingthemes/ssh-deploy@main
@@ -54,3 +62,11 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_MANUAL_TARGET }}
           EXCLUDE: "/dist/, /node_modules/"
+      - name: send telegram message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHANNEL_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            Manual Deployed to server.
+            See changes: http://docs.bbki.ng
