chore: update workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,22 +62,17 @@ jobs:
           message: |
             BBKi.ng Deployed to server.
             See changes: http://bbki.ng
-      - name: Deploy manual to Server
-        if: steps.changesets.outputs.published == 'true'
-        uses: easingthemes/ssh-deploy@main
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          SOURCE: "packages/manual/build/"
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          TARGET: ${{ secrets.REMOTE_MANUAL_TARGET }}
-          EXCLUDE: "/dist/, /node_modules/"
-      - name: send telegram message
-        if: steps.changesets.outputs.published == 'true'
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_CHANNEL_ID }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          message: |
-            Manual Deployed to server.
-            See changes: http://docs.bbki.ng
+  deploy-manual:
+    # if: steps.changesets.outputs.published == 'true'
+    uses: ./.github/workflows/deploy.yml
+    with:
+      msg: |
+        Manual Deployed to server successfully.
+        See changes: http://docs.bbki.ng
+    secrets:
+      serverPrivateKey: ${{ secrets.SERVER_SSH_KEY }}
+      remoteHost: ${{ secrets.REMOTE_HOST }}
+      remoteUser: ${{ secrets.REMOTE_USER }}
+      target: ${{ secrets.REMOTE_MANUAL_TARGET }}
+      msgChannelId: ${{ secrets.TELEGRAM_CHANNEL_ID }}
+      botToken: ${{ secrets.TELEGRAM_BOT_TOKEN }}
