--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,4 @@ jobs:
         with:
           to: ${{ secrets.msgChannelId}}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          message: |
-            ${{ msg }}
-
-
+          message: ${{ msg }}
