chore: update worflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,4 @@ jobs:
         with:
           to: ${{ secrets.msgChannelId}}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          message: ${{ msg }}
+          message: ${{ inputs.msg }}
