--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,9 @@ name: Deploy dist to server
 on:
   workflow_call:
     inputs:
+      package:
+        type: string
+        required: true
       msg:
         type: string
         required: false
@@ -20,8 +23,22 @@ on:
         required: true
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
+      - name: Setup Node.js 17.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 17.x
+      - name: Install pnpm
+        run: npm install -g pnpm
+      - name: Install Dependencies
+        run: pnpm install --no-frozen-lockfile
+      - name: Build Packages
+        run: pnpm turbo run build --filter ${{ inputs.package }}
   deploy:
-    name: deploy content to server
     runs-on: ubuntu-latest
     steps:
       - name: send files to server
