--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,16 +12,6 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v2
-      - name: Setup Node.js 17.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: 17.x
-      - name: Install pnpm
-        run: npm install -g pnpm
-      - name: Install Dependencies
-        run: pnpm install --no-frozen-lockfile
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
@@ -66,6 +56,7 @@ jobs:
     # if: steps.changesets.outputs.published == 'true'
     uses: ./.github/workflows/deploy.yml
     with:
+      package: '@bbki.ng/manual'
       msg: |
         Manual Deployed to server successfully.
         See changes: http://docs.bbki.ng
