--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,9 @@ name: Deploy dist to server
 on:
   workflow_call:
     inputs:
+      target:
+        type: string
+        required: true
       package:
         type: string
         required: true
@@ -9,17 +12,15 @@ on:
         type: string
         required: false
     secrets:
-      serverPrivateKey:
+      SERVER_SSH_KEY:
         required: true
-      remoteHost:
+      REMOTE_HOST:
         required: true
-      remoteUser:
+      REMOTE_USER:
         required: true
-      target:
+      TELEGRAM_CHANNEL_ID:
         required: true
-      msgChannelId:
-        required: true
-      botToken:
+      TELEGRAM_BOT_TOKEN:
         required: true
 
 jobs:
@@ -38,6 +39,7 @@ jobs:
         run: pnpm install --no-frozen-lockfile
       - name: Build Packages
         run: pnpm turbo run build --filter ${{ inputs.package }}
+
   deploy:
     needs: [build]
     runs-on: ubuntu-latest
@@ -45,15 +47,15 @@ jobs:
       - name: send files to server
         uses: easingthemes/ssh-deploy@main
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.serverPrivateKey }}
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           SOURCE: "packages/site/dist/"
-          REMOTE_HOST: ${{ secrets.remoteHost }}
-          REMOTE_USER: ${{ secrets.remoteUser }}
-          TARGET: ${{ secrets.target }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: ${{ inputs.target }}
           EXCLUDE: "/dist/, /node_modules/"
       - name: send telegram message
         uses: appleboy/telegram-action@master
         with:
-          to: ${{ secrets.msgChannelId}}
+          to: ${{ secrets.TELEGRAM_CHANNEL_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           message: ${{ inputs.msg }}
