--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,6 @@ name: Deploy dist to server
 on:
   workflow_call:
     inputs:
-      target:
-        type: string
-        required: true
       package:
         type: string
         required: true
@@ -17,6 +14,8 @@ on:
       REMOTE_HOST:
         required: true
       REMOTE_USER:
+        required: true
+      REMOTE_TARGET:
         required: true
       TELEGRAM_CHANNEL_ID:
         required: true
@@ -51,7 +50,7 @@ jobs:
           SOURCE: "packages/site/dist/"
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          TARGET: ${{ inputs.target }}
+          TARGET: ${{ secrets.REMOTE_TARGET }}
           EXCLUDE: "/dist/, /node_modules/"
       - name: send telegram message
         uses: appleboy/telegram-action@master
