--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,9 +66,14 @@ jobs:
     # if: steps.changesets.outputs.published == 'true'
     uses: ./.github/workflows/deploy.yml
     with:
-      target: "${{ secrets.REMOTE_MANUAL_TARGET }}"
       package: '@bbki.ng/manual'
       msg: |
         Manual Deployed to server successfully.
         See changes: http://docs.bbki.ng
-    secrets: inherit
+    secrets:
+      SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+      TELEGRAM_CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
+      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+      REMOTE_USER: ${{ secrets.REMOTE_USER }}
+      REMOTE_TARGET_TARGET: ${{ secrets.REMOTE_MANUAL_TARGET }}
