--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,4 +76,4 @@ jobs:
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
       REMOTE_USER: ${{ secrets.REMOTE_USER }}
-      REMOTE_TARGET_TARGET: ${{ secrets.REMOTE_MANUAL_TARGET }}
+      REMOTE_TARGET: ${{ secrets.REMOTE_MANUAL_TARGET }}
