chore: update workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy dist to server
 on:
   workflow_call:
     inputs:
-      srouce:
+      source:
         type: string
         required: true
       package:
