--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,17 @@ jobs:
         run: npm install -g pnpm
       - name: Install Dependencies
         run: pnpm install --no-frozen-lockfile
+
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
-          # This expects you to have a script called release which does a build for your packages and calls changeset publish
           publish: pnpm release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: echo outputs
+        run: echo ${{ toJson(steps.changesets.outputs) }}
       - name: send telegram message
         if: steps.changesets.outputs.published != 'true'
         uses: appleboy/telegram-action@master
