--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 17.x
+          cache: 'pnpm'
       - name: Install pnpm
         run: npm install -g pnpm
       - name: Install Dependencies
