--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -37,3 +37,10 @@ jobs:
           UPDATE_LABELS: ""
           UPDATE_METHOD: "rebase"
           PULL_REQUEST: "Version Packages"
+      - name: send result to telegram channel
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHANNEL_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            Pull Request auto merged.
