--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,10 +10,14 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   release:
     runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
     outputs:
       published: ${{ steps.changesets.outputs.published }}
       publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
     steps:
+      # setup pnpm and install dependencies
       - name: Checkout Repo
         uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2.2.2
@@ -29,6 +33,8 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --no-frozen-lockfile
 
+
+      # version or publish packages
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
@@ -37,6 +43,31 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      # build and upload artifacts
+      # 1. build site packages
+      - name: Build Site Packages
+        if: |
+          steps.changesets.outputs.published == 'true' &&
+          (contains(fromJson(steps.changesets.outputs.publishedPackages).*.name, '@bbki.ng/site'))
+        run: pnpm turbo run build --filter '@bbki.ng/site'
+      - name: Upload Site Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: site-artifact
+          path: packages/site/dist/
+
+      # 2. build manual packages
+      - name: Build Manual Packages
+        if: |
+          steps.changesets.outputs.published == 'true' &&
+          (contains(fromJson(steps.changesets.outputs.publishedPackages).*.name, '@bbki.ng/manual'))
+        run: pnpm turbo run build --filter '@bbki.ng/manual'
+      - name: Upload Manual Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: site-artifact
+          path: packages/manual/build/
 
   deploy-site:
     needs: [release]
