--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -34,8 +34,9 @@ jobs:
           MERGE_RETRIES: "6"
           MERGE_RETRY_SLEEP: "10000"
           MERGE_REQUIRED_APPROVALS: "0"
-          UPDATE_LABELS: ""
+          UPDATE_LABELS: "automerge"
           UPDATE_METHOD: "rebase"
+          BASE_BRANCHES: "main"
       - name: send result to telegram channel
         uses: appleboy/telegram-action@master
         with:
