--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -23,22 +23,16 @@ jobs:
     steps:
       - id: automerge
         name: automerge
-        uses: "pascalgn/automerge-action@v0.15.3"
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          MERGE_LABELS: "automerge"
-          MERGE_REMOVE_LABELS: "automerge"
-          MERGE_COMMIT_MESSAGE: "pull-request-description"
-          MERGE_FORKS: "false"
-          MERGE_RETRIES: "6"
-          MERGE_RETRY_SLEEP: "10000"
-          MERGE_REQUIRED_APPROVALS: "0"
-          UPDATE_LABELS: "automerge"
-          BASE_BRANCHES: "main"
-      - name: send result to telegram channel
-        uses: appleboy/telegram-action@master
+        uses: actions/github-script@v6
         with:
-          to: ${{ secrets.TELEGRAM_CHANNEL_ID }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          message: |
-            Pull Request auto merged.
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const [{ number }] = await octokit.rest.pulls.list({
+              owner: 'bbbottle',
+              repo: 'bottle',
+            });
+            octokit.rest.pulls.merge({
+              owner: 'bbbottle',
+              repo: 'bottle',
+              pull_number: number,
+            });
