--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -27,12 +27,13 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const [{ number }] = await github.rest.pulls.list({
+            const res = await github.rest.pulls.list({
               owner: 'bbbottle',
               repo: 'bottle',
             });
-            github.rest.pulls.merge({
-              owner: 'bbbottle',
-              repo: 'bottle',
-              pull_number: number,
-            });
+            console.log('res', res);
+#            github.rest.pulls.merge({
+#              owner: 'bbbottle',
+#              repo: 'bottle',
+#              pull_number: number,
+#            });
