chore: fix workflow syntax error

--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -23,7 +23,7 @@ jobs:
               title: 'new release content',
             });
 
-            const [{ number }] = res.data;
+            const { number } = res.data;
             github.rest.pulls.merge({
               owner: 'bbbottle',
               repo: 'bottle',
