--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,20 +19,8 @@ jobs:
       publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
     steps:
       # setup pnpm and install dependencies
-      - name: Checkout Repo
-        uses: actions/checkout@v2
-      - uses: pnpm/action-setup@v2.2.2
-        with:
-          version: 7
-      - name: Setup Node.js 17.x
-        uses: actions/setup-node@v2
-        with:
-          node-version: 17.x
-          cache: 'pnpm'
-      - name: Install pnpm
-        run: npm install -g pnpm
       - name: Install Dependencies
-        run: pnpm install --no-frozen-lockfile
+        uses: ./.github/actions/install-dependencies
 
       # version or publish packages
       - name: Create Release Pull Request or Publish to npm
@@ -43,6 +31,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      # merge version pr
+      - name: deploy manual artifact
+        if: |
+          steps.changesets.outputs.published == 'false' &&
+          steps.changesets.outputs.hasChangesets == 'true'
+        uses: ./.github/actions/merge-version-pr
 
       # deploy manual
       - name: deploy manual artifact
