--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,8 @@ jobs:
       published: ${{ steps.changesets.outputs.published }}
       publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
     steps:
-      # setup pnpm and install dependencies
+      - name: Checkout Repo
+        uses: actions/checkout@v2
       - name: Install Dependencies
         uses: ./.github/actions/install-dependencies
 
