--- a/.github/actions/merge-version-pr/action.yml
+++ b/.github/actions/merge-version-pr/action.yml
@@ -13,7 +13,7 @@ runs:
       name: merge changes
       uses: actions/github-script@v6
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ inputs.GITHUB_TOKEN }}
         script: |
           const res = octokit.rest.pulls.list({
             owner,
