chore: update undefined value

--- a/.github/actions/merge-version-pr/action.yml
+++ b/.github/actions/merge-version-pr/action.yml
@@ -15,7 +15,7 @@ runs:
       with:
         github-token: ${{ inputs.GITHUB_TOKEN }}
         script: |
-          const res = octokit.rest.pulls.list({
+          const res = github.rest.pulls.list({
             owner,
             repo,
           });
