fix: action syntax error

--- a/.github/actions/merge-version-pr/action.yml
+++ b/.github/actions/merge-version-pr/action.yml
@@ -16,7 +16,7 @@ runs:
         github-token: ${{ inputs.GITHUB_TOKEN }}
         script: |
           const res = await github.rest.pulls.list({
-            owner: 'bbbottle,
+            owner: 'bbbottle',
             repo: 'bottle',
           });
 
