--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
     outputs:
       published: ${{ steps.changesets.outputs.published }}
       publishedPackages: ${{ steps.changesets.outputs.publishedPackages }}
+      hasChangesets: ${{ steps.changesets.outputs.hasChangesets }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2
@@ -61,7 +62,13 @@ jobs:
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           REMOTE_TARGET: ${{ secrets.REMOTE_SITE_TARGET }}
 
-
+  rerun:
+    needs: [release]
+    if: |
+      needs.release.outputs.published == 'false' &&
+      needs.release.outputs.hasChangesets == 'true'
+    uses: ./.github/workflows/release.yml
+    secrets: inherit
 #  deploy-site:
 #    needs: [release]
 #    if: |
