--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,18 +49,19 @@ jobs:
           steps.changesets.outputs.published == 'true' &&
           (contains(fromJson(steps.changesets.outputs.publishedPackages).*.name, '@bbki.ng/manual'))
         uses: ./.github/actions/deploy
-        with:
-          source: 'packages/manual/build/'
-          package: '@bbki.ng/manual'
-          msg: |
-            Site Deployed to server successfully.
-            See changes: https://bbki.ng
+        env:
           SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
           TELEGRAM_CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           REMOTE_TARGET: ${{ secrets.REMOTE_SITE_TARGET }}
+        with:
+          source: 'packages/manual/build/'
+          package: '@bbki.ng/manual'
+          msg: |
+            Site Deployed to server successfully.
+            See changes: https://bbki.ng
 #  deploy-site:
 #    needs: [release]
 #    if: |
