chore: update workflow

--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -18,7 +18,7 @@ jobs:
             const res = await github.rest.pulls.create({
               owner: 'bbbottle',
               repo: 'bottle',
-              head: 'bbbottle:release',
+              head: 'bbbottle:autorelease',
               base: 'main',
               title: 'new release content',
             });
