--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,13 @@ on:
     branches:
       - main
 
+env:
+  SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
+  TELEGRAM_CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
+  TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+  REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+  REMOTE_USER: ${{ secrets.REMOTE_USER }}
+
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
@@ -49,15 +56,9 @@ jobs:
           steps.changesets.outputs.published == 'true' &&
           (contains(fromJson(steps.changesets.outputs.publishedPackages).*.name, '@bbki.ng/manual'))
         uses: ./.github/actions/deploy
-        env:
-          SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          TELEGRAM_CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          REMOTE_TARGET: ${{ secrets.REMOTE_SITE_TARGET }}
         with:
           source: 'packages/manual/build/'
+          target: ${{ secrets.REMOTE_MANUAL_TARGET }}
           package: '@bbki.ng/manual'
           msg: |
             Docs Deployed to server successfully.
@@ -69,15 +70,9 @@ jobs:
           steps.changesets.outputs.published == 'true' &&
           (contains(fromJson(steps.changesets.outputs.publishedPackages).*.name, '@bbki.ng/site'))
         uses: ./.github/actions/deploy
-        env:
-          SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
-          TELEGRAM_CHANNEL_ID: ${{ secrets.TELEGRAM_CHANNEL_ID }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-          REMOTE_TARGET: ${{ secrets.REMOTE_SITE_TARGET }}
         with:
           source: 'packages/site/dist/'
+          target: ${{ secrets.REMOTE_SITE_TARGET }}
           package: '@bbki.ng/site'
           msg: |
             Site Deployed to server successfully.
